# Numerical-Recipes

./: CMakeLists.txt  README.md
src/: main.cpp  rlft3_sharpen.cpp  sfroid.cpp
src/examples/: anneal.cpp  bessel.cpp  integrals.cpp  levex.cpp  ludcomp.cpp  odeint.cpp  sfroid.cpp  vegas.cpp
src/include/: adapt.h  amebsa.h  amoeba.h  anneal.h  arithcode.h  asolve.h  banded.h  bessel.h  besselfrac.h  calendar.h  chebyshev.h  cholesky.h  circumcircle.h  cisi.h  convlv.h  correl.h  dawson.h  decchk.h  delaunay.h  derule.h  deviates.h  dfridr.h  dftintegrate.h  difeq.h  distributions.h  dynpro.h  eclass.h  eigen_sym.h  eigen_unsym.h  elliptint.h  erf.h  expint.h  fasper.h  fermi.h  fit_examples.h  fitab.h  fitexy.h  fitlin.h  fitmed.h  fitmrq.h  (+122 more)
src/include/AMD/: SuiteSparse_config.h  amd.h
src/include/LDL/: SuiteSparse_config.h  ldl.h
src/test/: anneal.cpp  integrals.cpp  levex.cpp  ludcomp.cpp  odeint.cpp
